adicionando feedback visual

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
             </fieldset>
 
             <fieldset>
-                <legend>Valor e Devedor</legend>
+                <legend>Valor, Devedor e Data</legend>
                 <label for="valor">Valor (R$):</label>
                 <input type="text" id="valor" placeholder="Ex: 130,00">
                 <label for="devedor">Nome do Devedor:</label>
                 <input type="text" id="devedor" placeholder="Ex: ALIANCA SOLUCOES EM NEGOCIOS LTDA">
+                <label for="dataPagamento">Pago em (dd/mm/aaaa):</label>
+                <input type="text" id="dataPagamento" placeholder="Deixe em branco para usar a data de hoje">
             </fieldset>
             
             <fieldset>
