--- a/index.html
+++ b/index.html
@@ -70,7 +70,16 @@
                         <div class="recibo-secao"><h4>Recebedor</h4><p><strong>Nome:</strong> <span id="reciboNomeRecebedor"></span></p><p><strong>CNPJ:</strong> <span id="reciboCnpjRecebedor"></span></p><p><strong>Instituição:</strong> <span id="reciboInstRecebedor"></span></p></div>
                         <div class="recibo-secao"><h4>Pagador</h4><p><strong>Nome:</strong> <span id="reciboNomePagador"></span></p><p><strong>CNPJ:</strong> <span id="reciboCnpjPagador"></span></p><p><strong>Agência:</strong> <span id="reciboAgenciaPagador"></span> | <strong>Conta:</strong> <span id="reciboContaPagador"></span></p><p><strong>Instituição:</strong> <span id="reciboInstPagador"></span></p></div>
                         <div class="recibo-secao"><h4>Informações Adicionais</h4><p><strong>Devedor:</strong> <span id="reciboDevedor"></span></p></div>
-                        <div class="assinatura"><p>_____________________________________</p><p>Assinatura Responsável Financeiro</p></div>
+                        
+                        <div class="assinatura-recebedor">
+                            <p>_____________________________________</p>
+                            <p>Assinatura de quem recebeu o valor</p>
+                        </div>
+                        
+                        <div class="assinatura">
+                            <p>_____________________________________</p>
+                            <p>Assinatura Responsável Financeiro</p>
+                        </div>
                     </div>
                     <div class="recibo-image-area"><div id="comprovanteAnexadoContainer" class="hidden"><h4>Comprovante Original Anexado</h4><img id="imagemComprovante" src="#" alt="Comprovante Anexado"></div></div>
                 </div>
